--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -10,13 +10,22 @@
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
   
-      <servlet>
+    <servlet>
 		<servlet-name>SymphonyWithDAO</servlet-name>
 		<servlet-class>SymphonySVWithDAO</servlet-class>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>SymphonyWithDAO</servlet-name>
 		<url-pattern>/servlet/symphonySV</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>MovementList</servlet-name>
+		<servlet-class>MovementSV</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>MovementList</servlet-name>
+		<url-pattern>/servlet/movementSV</url-pattern>
 	</servlet-mapping>
 	
 </web-app>
