add 2 button functions

--- a/.gitignore
+++ b/.gitignore
@@ -115,3 +115,38 @@
 /build
 /build
 /build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
